k8s/apps/generated-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agnetz
  labels:
    app.kubernetes.io/name: agnetz
