k8s/apps/generated-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: agnetz
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
