k8s/apps/generated-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: agnetz
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
