k8s/apps/generated-app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: agnetz
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: postgres
